# databricks-aws-migration-tool

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
config/: config.yaml
deploy/iam/: bedrock-minimal-policy.json
scripts/: build.sh  diag_bedrock.py  setup.sh  test.sh
src/analyzers/: bedrock_analyzer.py  notebook_analyzer.py
src/connectors/: databricks_connector.py
src/converters/: notebook_converter.py
src/migrators/: table_migrator.py
src/tco/: tco.py
src/utils/: base.py
